Alignment,space issue fixed for Pf card

--- a/react_webviews/src/designSystem/feature/portfolio/PfFundSelectionCard/PfFundSelectionCard.scss
+++ b/react_webviews/src/designSystem/feature/portfolio/PfFundSelectionCard/PfFundSelectionCard.scss
@@ -6,7 +6,7 @@
     padding: 16px 16px 8px !important;
     .main-title {
       margin-left: 12px;
-      width: 75%;
+      width: 100%;
     }
     .top-label {
       width: 25%;
